[metadata]
name = napari-3d-affine
version = 0.0.1
description = Simple 3D affine registration from points layers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jfozard/napari-3d-affine
author = John Fozard
author_email = john.fozard@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/jfozard/napari-3d-affine/issues
    Documentation = https://github.com/jfozard/napari-3d-affine#README.md
    Source Code = https://github.com/jfozard/napari-3d-affine
    User Support = https://github.com/jfozard/napari-3d-affine/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-3d-affine = napari_3d_affine:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
